<resources>
    <string name="app_name">Market Calculator</string>
    <string name="zero">0</string>
    <string name="openbracket">(</string>
    <string name="Clr">CLR</string>
    <string name="closebracket">)</string>
    <string name="percent">%</string>
    <string name="del">DEL</string>
    <string name="seven">7</string>
    <string name="eight">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="dot">.</string>
    <string name="zeroinput">0</string>
    <string name="equalto">=</string>
    <string name="multiply">x</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="division">÷</string>
    <string name="eightnum">8</string>
    <string name="nine">9</string>
</resources>